Added Password Recovery and Reset

--- a/CookingCurator/Views/Home/Login.cshtml
+++ b/CookingCurator/Views/Home/Login.cshtml
@@ -42,6 +42,9 @@
 
 <p class="col-md-offset-2 col-md-10">New User?  @Html.ActionLink("Click here", "Register", "Home") to Register!</p>
 
+<p class="col-md-offset-2 col-md-10">Forgot your password?  @Html.ActionLink("Click here", "Forgot", "Home") to recover it.</p>
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
