--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -9,6 +9,7 @@
 
 <div>
     <h4>Detailed Recipe Information</h4>
+    <h5> @Html.ActionLink("Bookmark this recipe", "BookmarkRecipe", new { id = Model.recipe_Id })</h5>
     <hr />
     <dl class="dl-horizontal">
         <dt>
