--- a/CookingCurator/Views/Profile/UserDashboard.cshtml
+++ b/CookingCurator/Views/Profile/UserDashboard.cshtml
@@ -17,8 +17,8 @@
         Your Settings
     </p>
     <div class="col-lg-12 text-center" style="font-size:x-large">
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Username", "Profile", "ChangeUsername")</p>
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Password", "Profile", "ChangePassword")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Username",  "ChangeUsername", "Profile")</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Change Password", "ChangePassword", "Profile")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Allergies</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Diets</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">Set Sorting Preference</p>
