--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -25,8 +25,10 @@
 
         <dd>
             @Html.DisplayFor(model => model.rating)
-            || @Html.ActionLink("Rate Up", "VoteUp", new { id = Model.recipe_Id })
-            || @Html.ActionLink("Rate Down", "VoteDown", new { id = Model.recipe_Id })
+            <p>
+                   @Html.ActionLink("Rate Up", "VoteUp", new { id = Model.recipe_Id })
+                || @Html.ActionLink("Rate Down", "VoteDown", new { id = Model.recipe_Id })
+            </p>     
         </dd>
 
         <dt>
