Fixed some page text and links

--- a/CookingCurator/Views/Profile/ChangeUsername.cshtml
+++ b/CookingCurator/Views/Profile/ChangeUsername.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ChangeUsername</h2>
+<h2>Change Username</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ChangeUsernameViewModel</h4>
+        <h4>Your username must be unique</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
