--- a/CookingCurator/Views/Profile/ChangePassword.cshtml
+++ b/CookingCurator/Views/Profile/ChangePassword.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ChangePassword</h2>
+<h2>Change Password</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ChangePasswordViewModel</h4>
+        <h4>Password must be at least 8 characters and alphanumeric</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
