Fixed some page text and links

--- a/CookingCurator/Views/Shared/_Layout.cshtml
+++ b/CookingCurator/Views/Shared/_Layout.cshtml
@@ -19,17 +19,22 @@
                 </button>
                 @Html.ActionLink("Cooking Curator", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <!-- <li>@Html.ActionLink("About", "About", "Home")</li> -->
-                    <li>@Html.ActionLink("Contact Us", "ContactUs", "Profile")</li>
-                    <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Profile")</li>
-                    <li>@Html.ActionLink("User Dashboard", "UserDashboard", "Profile")</li>
-                    <li>@Html.ActionLink("User Index", "Index", "User")</li>
-                    <li>@Html.ActionLink("Recipe Listing", "Index", "Recipe")</li>
-                </ul>
-            </div>
+            @if(User.Identity.IsAuthenticated){
+
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <!-- <li>@Html.ActionLink("About", "About", "Home")</li> -->
+                        <li>@Html.ActionLink("Contact Us", "ContactUs", "Profile")</li>
+                        <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Profile")</li>
+                        <li>@Html.ActionLink("User Dashboard", "UserDashboard", "Profile")</li>
+                        <li>@Html.ActionLink("User Index", "Index", "User")</li>
+                        <li>@Html.ActionLink("Recipe Listing", "Index", "Recipe")</li>
+                        <li>@Html.ActionLink("Search Recipes", "Search", "Search")</li>
+                    </ul>
+                </div>
+            }
+
         </div>
     </div>
     <div class="container body-content">
