--- a/CookingCurator/Views/Profile/UserDashboard.cshtml
+++ b/CookingCurator/Views/Profile/UserDashboard.cshtml
@@ -34,7 +34,7 @@
     <div class="col-lg-12 text-center" style="font-size:x-large; padding-bottom:84px">
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("View All Recipes", "Index", "Recipe")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Create New Recipe", "Create", "Recipe")</p>
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:pink;border:groove;border-width:10px">View Bookmarks</p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("View Bookmarks", "Index", "Bookmark")</p>
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:lightgoldenrodyellow;border:groove;border-width:10px">@Html.ActionLink("Search For Recipes", "Search", "Search")</p>
     </div>
 </div>
@@ -49,7 +49,7 @@
     <hr />
     <p>
         Have a concern?
-        @Html.ActionLink("Contact Us", "Contact", "Home")
+        @Html.ActionLink("Contact Us", "ContactUs", "Profile")
     </p>
     <hr />
 </div>
