--- a/CookingCurator/Views/Search/Search.cshtml
+++ b/CookingCurator/Views/Search/Search.cshtml
@@ -77,7 +77,7 @@
                     @Html.DisplayFor(modelItem => item.country)
                 </td>
                 <td>
-                    @Html.ActionLink("Details", "Details", new { id = item.recipe_Id })
+                    @Html.ActionLink("Details","Details", "Recipe", new { id = item.recipe_Id }, null)
                 </td>
             </tr>
         }
