--- a/CookingCurator/Views/Recipe/Index.cshtml
+++ b/CookingCurator/Views/Recipe/Index.cshtml
@@ -107,9 +107,12 @@ else
                     @Html.DisplayFor(modelItem => item.mealTimeType)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.recipe_Id }) <br />
                     @Html.ActionLink("Details", "Details", new { id = item.recipe_Id }) <br />
-                    @Html.ActionLink("Delete", "Delete", new { id = item.recipe_Id })
+                    @if (ViewBag.Admin == true || ViewBag.Username == item.author)
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.recipe_Id }) <br />
+                        @Html.ActionLink("Delete", "Delete", new { id = item.recipe_Id })
+                    }
                 </td>
             </tr>
         }
