--- a/CookingCurator/Views/Recipe/Authors.cshtml
+++ b/CookingCurator/Views/Recipe/Authors.cshtml
@@ -35,22 +35,22 @@ else
     <table class="table">
         <tr>
             <th>
-                Recipe Title
+                @Html.DisplayNameFor(model => model.title)
             </th>
             <th>
-                Recipe Rating
+                @Html.DisplayNameFor(model => model.rating)
             </th>
             <th>
-                Verified Status
+                @Html.DisplayNameFor(model => model.verified)
             </th>
             <th>
-                Source
+                @Html.DisplayNameFor(model => model.source_Link)
             </th>
             <th>
-                Country of Origin
+                @Html.DisplayNameFor(model => model.country)
             </th>
             <th>
-                Meal Type
+                @Html.DisplayNameFor(model => model.mealTimeType)
             </th>
             <th></th>
         </tr>
