--- a/CookingCurator/Views/Allergy/Ingredient.cshtml
+++ b/CookingCurator/Views/Allergy/Ingredient.cshtml
@@ -26,4 +26,4 @@
 </table>
 
 <p>@Html.ActionLink("Return to Allergy List", "Index", "Allergy")</p>
-<p>@Html.ActionLink("Return to Recipe List", "Details", "Recipe")</p>
+<p>@Html.ActionLink("Return to Recipe List", "Index", "Recipe")</p>
