--- a/CookingCurator/Views/Allergy/Index.cshtml
+++ b/CookingCurator/Views/Allergy/Index.cshtml
@@ -37,5 +37,5 @@
 
 <hr />
 
-@Html.ActionLink("Return to Recipe Index", "Index", "Recipe")
+@Html.ActionLink("Return to Recipe Listing", "Index", "Recipe")
 
