--- a/CookingCurator/Views/Profile/AdminDoc.cshtml
+++ b/CookingCurator/Views/Profile/AdminDoc.cshtml
@@ -8,10 +8,16 @@
 
 <h3>Dealing with Reported Recipes</h3>
 
-<p>When users report a </p>
+<p>When users report a recipe, a email will be sent to the admin account. Please take a look in order to decide whether a recipe should be removed or not.</p>
 
 <h3>Admin Created Recipes</h3>
 
 <p>Admin created recipes will have a verified checkbox next to them.</p>
 
+<p>Also, admins need to fill in every field in order to create a recipe.</p>
+
 <h3>Banning Users</h3>
+
+<p>Admins have the option of banning users by clicking on "Ban User" in the User Index.</p>
+
+<p>Ban users do not have the ability to log into there accounts.</p>
