--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -6,14 +6,52 @@
 
 <h2>User Doc</h2>
 
-<p>Creating a recipe</p>
+<h3>Creating a recipe</h3>
 
-<p>Searching a recipe</p>
+<p>Users can create there own recipes by clicking on "Add New Recipe" in Recipe Index.</p>
 
-<p>Recipe Filtering</p>
+<p>Ingredients can be selected using the Ingredient Selection Field.</p>
 
-<p>Rating Recipe</p>
+<p>Users have the option to leave out the source link but need to fill every other field.</p>
 
-<p>Reporting Recipe</p>
+<h3>Editing a recipe</h3>
 
-<p>Reporting a recipe</p>
+<p>Note: Users can only edit there own recipes</p>
+
+<p>Users can edit there own recipes by clicking on "Edit" in Recipe Index.</p>
+
+<h3>Deleting a recipe</h3>
+
+<p>Note: Users can only delete there own recipes</p>
+
+<p>Users can delete there own recipes by clicking on "Delete".</p>
+
+<h3>Getting more details about a recipe</h3>
+
+<p>Go the recipe you want and click on "Details"</p>
+
+<h3>Searching a recipe</h3>
+
+<p>You can search by Ingredients or Title</p>
+
+<p>In order to search Ingredients, you need to use "," between ingredients</p>
+
+<h3>Recipe Filtering</h3>
+
+<p>When in the recipe index, you can filter by country and meal type.</p>
+
+<p>Also, users can select to see only Verified or User Recipes.</p>
+
+<h3>Rating Recipe</h3>
+
+<p>Users can only rate a recipe once.</p>
+
+<p>Users can rate recipes with thumbs up or down.</p>
+
+<h3>Reporting Recipe</h3>
+
+<p>Users can report inappropriate recipes by going to the Recipe Detail view and clicking on "Report this Recipe"</p>
+
+<h3>Bookmarking a recipe</h3>
+
+<p>Users can bookmark a recipe by clicking on "Bookmark Recipe" in Recipe Detail Page.</p>
