Updated so that admins now go to create verified

--- a/CookingCurator/Views/Recipe/Index.cshtml
+++ b/CookingCurator/Views/Recipe/Index.cshtml
@@ -42,7 +42,14 @@
 else
 {
     <p>
-        @Html.ActionLink("Add New Recipe", "Create")
+        @if (ViewBag.Admin == true)
+        {
+            @Html.ActionLink("Add New Recipe", "CreateVerified")
+        }
+        else
+        {
+            @Html.ActionLink("Add New Recipe", "Create")
+        }
     </p>
     <table class="table">
         <tr>
