--- a/CookingCurator/Views/Shared/_Layout.cshtml
+++ b/CookingCurator/Views/Shared/_Layout.cshtml
@@ -24,13 +24,14 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <!-- <li>@Html.ActionLink("About", "About", "Home")</li> -->
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact Us", "ContactUs", "Profile")</li>
                         <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Profile")</li>
                         <li>@Html.ActionLink("User Dashboard", "UserDashboard", "Profile")</li>
                         <li>@Html.ActionLink("User Index", "Index", "User")</li>
                         <li>@Html.ActionLink("Recipe Listing", "Index", "Recipe")</li>
                         <li>@Html.ActionLink("Search Recipes", "Search", "Search")</li>
+                        <li>@Html.ActionLink("Log Out", "Logout", "Home")</li>
                     </ul>
                 </div>
             }
