--- a/CookingCurator/Views/Profile/AdminDoc.cshtml
+++ b/CookingCurator/Views/Profile/AdminDoc.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Dealing with Reported Recipes</h3>
 
-<p>When users report a recipe, a email will be sent to the admin account. Please take a look in order to decide whether a recipe should be removed or not.</p>
+<p>When users report a recipe, an email will be sent to the admin account. Please take a look in order to decide whether a recipe should be removed or not.</p>
 
 <h3>Admin Created Recipes</h3>
 
@@ -20,4 +20,4 @@
 
 <p>Admins have the option of banning users by clicking on "Ban User" in the User Index.</p>
 
-<p>Ban users do not have the ability to log into there accounts.</p>
+<p>Banned users do not have the ability to log into there accounts.</p>
