--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Creating a recipe</h3>
 
-<p>Users can create there own recipes by clicking on "Add New Recipe" in Recipe Index.</p>
+<p>Users can create their own recipes by clicking on "Add New Recipe" in Recipe Index.</p>
 
 <p>Ingredients can be selected using the Ingredient Selection Field.</p>
 
@@ -16,15 +16,15 @@
 
 <h3>Editing a recipe</h3>
 
-<p>Note: Users can only edit there own recipes</p>
+<p>Note: Users can only edit their own recipes</p>
 
-<p>Users can edit there own recipes by clicking on "Edit" in Recipe Index.</p>
+<p>Users can edit their own recipes by clicking on "Edit" in Recipe Index.</p>
 
 <h3>Deleting a recipe</h3>
 
-<p>Note: Users can only delete there own recipes</p>
+<p>Note: Users can only delete their own recipes</p>
 
-<p>Users can delete there own recipes by clicking on "Delete".</p>
+<p>Users can delete their own recipes by clicking on "Delete".</p>
 
 <h3>Getting more details about a recipe</h3>
 
@@ -51,6 +51,8 @@
 <h3>Reporting Recipe</h3>
 
 <p>Users can report inappropriate recipes by going to the Recipe Detail view and clicking on "Report this Recipe"</p>
+
+<p>Note: Users can only report a recipe once</p>
 
 <h3>Bookmarking a recipe</h3>
 
