--- a/CookingCurator/Views/Home/Index.cshtml
+++ b/CookingCurator/Views/Home/Index.cshtml
@@ -1,34 +1,88 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+                /**/
+
+                ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h2>Cooking Curator</h2>
-    <p class="lead">
-        @if (User.Identity.IsAuthenticated)
+@if (User.Identity.IsAuthenticated)
+{
+    <div class="jumbotron">
+        <h2>Cooking Curator Home</h2>
+        <div class="row">
+            <div class="col-md-8">
+                <p class="lead">
+                <p>Welcome! You are logged in as: @(User.Identity.IsAuthenticated ? HttpContext.Current.User.Identity.Name : "Guest")</p>
+
+                <p><button>@Html.ActionLink("Log Out", "Logout", "Home")</button></p>
+
+                <p><button> @Html.ActionLink("About this application", "About", "Home") </button></p>
+            </div>
+            <div class="col-md-4">
+                <img src="~/Content/images/CookingCuratorLogo.jpg" />
+            </div>
+        </div>
+     </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Recipes</h2>
+            <p>Getting started creating recipes using the links below: </p>
+            <p><button>@Html.ActionLink("Add User Recipe", "Create", "Recipe")</button></p>
+            @if (this.User.IsInRole("Admin"))
+            {
+                <p><button>@Html.ActionLink("Add Verified Recipe", "CreateVerified", "Recipe")</button></p>
+            }
+            <p><button>@Html.ActionLink("References", "Index", "References")</button></p>
+            <p><button>@Html.ActionLink("Search for Recipe", "Search", "Search")</button></p>
+
+        </div>
+        @if (this.User.IsInRole("Admin"))
         {
-            <p>Welcome User @(User.Identity.IsAuthenticated ? HttpContext.Current.User.Identity.Name : "Guest")!! You are Logged In.</p>
-
-            <p><button>@Html.ActionLink("Log Out", "Logout", "Home")</button></p>
+            <div class="col-md-6">
+                <h2>Users</h2>
+                <p>Search through the list of users in the application:</p>
+                <p><button>@Html.ActionLink("Search for a user", "Search", "User")</button></p>
+            </div>
         }
+        </div>
+}
+else
+{
+    <div class="jumbotron">
+        <h2>Welcome to the Cooking Curator Website!</h2>
+        <p class="lead">
 
-        <p><button> @Html.ActionLink("About this application", "About", "Home") </button></p>
+            <div class="row">
+                <div class="col-md-8">
+                    <p>This website is a recipe storage application and is free to use.</p>
+                     <ul>
+                        <li>Search through recipes from our catalogue.</li>
+                        <li>Find recipes by title, author, or ingredients!</li>
+                        <li>Bookmark your favourites for easy access!</li>
+                        <li>Upload your own recipes to share with other users!</li>
+                        <li>And more!</li>
+                    </ul>
+                    <br />
+                    <p><button> @Html.ActionLink("Learn more about this application", "About", "Home") </button></p>
+                </div>
+                <div class="col-md-4">
+                    <img src="~/Content/images/CookingCuratorLogo.jpg" />
+                </div>
+            </div>
+
+
 
     </div>
 
-<div class="row">
-    <div class="col-md-6">
-        <h2>Recipes</h2>
-        <p>Getting started creating recipes using the links below: </p>
-        <p><button>@Html.ActionLink("Add User Recipe", "Create", "Recipe")</button></p>
-        <p><button>@Html.ActionLink("Add Verified Recipe", "CreateVerified", "Recipe")</button></p>
-        <p><button>@Html.ActionLink("References", "Index", "References")</button></p>
-        <p><button>@Html.ActionLink("Search for Recipe", "Search", "Search")</button></p>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>New to the site?  Click <button> @Html.ActionLink("here", "Register", "Home") </button> to register.</h3>
+            <h3>Only a valid email address is required to sign up!</h3>
 
+        </div>
+        <div class="col-md-6 text-right">
+            <h3>Already signed up?  Click <button> @Html.ActionLink("here", "Login", "Home") </button> to log in.</h3>
+
+        </div>
     </div>
-    <div class="col-md-6">
-        <h2>Users</h2>
-        <p>Search through the list of users in the application:</p>
-        <p><button>@Html.ActionLink("Search for a user", "Search", "User")</button></p>
-    </div>
-</div>
+}
