--- a/CookingCurator/Views/Home/About.cshtml
+++ b/CookingCurator/Views/Home/About.cshtml
@@ -32,7 +32,7 @@
             </ul>
 
             <p>
-                Our rating system allows users give up and down votes to each recipes.  Help us find the best of the best!
+                Our rating system allows users give up and down votes to each recipe.  Help us find the best of the best!
             </p>
 
             <p>
