More UI Updates

--- a/CookingCurator/Views/Shared/_Layout.cshtml
+++ b/CookingCurator/Views/Shared/_Layout.cshtml
@@ -39,6 +39,15 @@
                     </ul>
                 </div>
             }
+            else
+            {
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Register", "Register", "Home")</li>
+                        <li>@Html.ActionLink("Login", "Login", "Home")</li>
+                    </ul>
+                </div>
+            }
 
         </div>
     </div>
