--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -27,9 +27,9 @@
         <dd>
             @Html.DisplayFor(model => model.rating)
             <p>
-                   @Html.ActionLink("Rate Up", "VoteUp", new { id = Model.recipe_Id })
+                @Html.ActionLink("Rate Up", "VoteUp", new { id = Model.recipe_Id })
                 || @Html.ActionLink("Rate Down", "VoteDown", new { id = Model.recipe_Id })
-            </p>     
+            </p>
         </dd>
 
         <dt>
@@ -95,7 +95,14 @@
         <dd>
             @Html.DisplayFor(model => model.mealTimeType)
         </dd>
-
+        @if(!String.IsNullOrEmpty(Model.fileResult)){
+            <dt>
+                Recipe Image
+            </dt>
+            <dd>
+                <img src="@Model.fileResult" alt="Recipe Image" />
+            </dd>
+        }
         <dt>
             Ingredients
         </dt>
