--- a/CookingCurator/Views/Home/Register.cshtml
+++ b/CookingCurator/Views/Home/Register.cshtml
@@ -13,6 +13,7 @@
     
 <div class="form-horizontal">
     <h4>Registration Form</h4>
+    <p>Valid Email is needed to register</p>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
