--- a/CookingCurator/Views/Search/Search.cshtml
+++ b/CookingCurator/Views/Search/Search.cshtml
@@ -25,6 +25,8 @@
 
     <p>Note: When searching by ingredients, use a comma (",") to seperate ingredients</p>
 
+    <p>@ViewBag.NoText</p>
+
     @Html.DropDownListFor(m => m.searchSelection, Model.list)
 
     <div class="form-group">
