Fixed the editing recipe issue and added the note regarding the image size

--- a/CookingCurator/Views/Recipe/CreateVerified.cshtml
+++ b/CookingCurator/Views/Recipe/CreateVerified.cshtml
@@ -73,7 +73,8 @@
     <div class="form-group">
         @Html.Label("Recipe Image", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" id="file" name="file" />
+            <input type="file" id="file" name="file" style="margin-bottom:5px"/>
+            <span style="color:#989898">Note: Image size should be less than 50kb.</span>
         </div>
     </div>
 
