--- a/CookingCurator/Views/Recipe/Edit.cshtml
+++ b/CookingCurator/Views/Recipe/Edit.cshtml
@@ -97,19 +97,19 @@
     </div>
 
     @if(!String.IsNullOrEmpty(@Model.fileResult)){
-        <div class="form-group">
-            @Html.Label("Recipe Image", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <img src="@Model.fileResult" alt="Recipe Image" />
-            </div>
-
+    <div class="form-group">
+        @Html.Label("Recipe Image", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10" id="divImg" style="height:200px;width:200px;">
+            <img src="@Model.fileResult" style="height:200px" alt="Recipe Image" />
         </div>
+    </div>
     }
 
     <div class="form-group">
         @Html.Label("Alter Image", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" id="file" name="file" />
+            <input type="file" id="file" name="file" style="margin-bottom:5px"/>
+            <span style="color:#989898">Note: Image size should be less than 50kb.</span>
         </div>
     </div>
 
