Fixed the no image issue for Index page

--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -115,7 +115,7 @@
     @if (!String.IsNullOrEmpty(Model.fileResult))
     {
         <div id="imgDiv" class="col-lg-offset-1">
-            <img src="@Model.fileResult" alt="Recipe Image" />
+            <img src="@Model.fileResult" class="thumbnail" alt="Recipe Image" />
         </div>
 
     }
