--- a/CookingCurator/Views/Recipe/Index.cshtml
+++ b/CookingCurator/Views/Recipe/Index.cshtml
@@ -115,11 +115,21 @@ else
             <td>
                 @Html.DisplayFor(modelItem => item.mealTimeType)
             </td>
-            <td>
-                <div id="divImg" style="display:block;margin-left:auto;margin-right:auto;height:150px;width:150px;margin-bottom:5px">
-                    <img class="img-responsive" style="height:150px" src="@Html.Raw("data:" + item.Content_Type + ";base64," + Convert.ToBase64String(item.Content))" alt="RecipeImage">
-                </div>
-            </td>
+            @if (item.Content != null && item.Content_Type != null)
+            {
+                <td>
+                    <div id="divImg" style="display:block;margin-left:auto;margin-right:auto;height:150px;width:150px;margin-bottom:5px">
+                        <img class="img-responsive thumbnail" style="height:150px" src="@Html.Raw("data:" + item.Content_Type + ";base64," + Convert.ToBase64String(item.Content))" alt="RecipeImage">
+                    </div>
+                </td>
+            }
+            else
+            {
+                <td>
+                    No Recipe Image
+                </td>
+            }
+
             <td>
                 @Html.ActionLink("Details", "Details", new { id = item.recipe_Id }) <br />
                 @if (ViewBag.Admin == true || ViewBag.Username == item.author)
