Moved ReportRecipeViewModel.cs to EntityModels

--- a/CookingCurator/Views/Recipe/ReportRecipe.cshtml
+++ b/CookingCurator/Views/Recipe/ReportRecipe.cshtml
@@ -1,4 +1,4 @@
-﻿@model CookingCurator.Controllers.ReportRecipeViewModel
+﻿@model CookingCurator.EntityModels.ReportRecipeViewModel
 
 @{
     ViewBag.Title = "ReportRecipe";
