--- a/CookingCurator/Views/Home/Register.cshtml
+++ b/CookingCurator/Views/Home/Register.cshtml
@@ -14,6 +14,8 @@
 <div class="form-horizontal">
     <h4>Registration Form</h4>
     <p>Valid Email is needed to register</p>
+    <p>Your username must be unique</p>
+    <p>Username must have no spaces</p>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
