--- a/CookingCurator/Views/Profile/ChangeUsername.cshtml
+++ b/CookingCurator/Views/Profile/ChangeUsername.cshtml
@@ -13,6 +13,7 @@
     
     <div class="form-horizontal">
         <h4>Your username must be unique</h4>
+        <h4>Username must have no spaces</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
