--- a/CookingCurator/Views/Home/About.cshtml
+++ b/CookingCurator/Views/Home/About.cshtml
@@ -46,7 +46,7 @@
 
 
      <br />
-     <p><button> @Html.ActionLink("Return to Home Page", "Index", "Home") </button></p>
+     <p>@Html.ActionLink("Return to Home Page", "Index", "Home", null, new { @class = "btn btn-default" })</p>
      <br />
 
      <p>*Please note, the Cooking Curator Team reserves the right to take down any recipe considered to be in violation of our terms of service.</p>
