--- a/CookingCurator/Views/Home/Index.cshtml
+++ b/CookingCurator/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@ else
             <li>And more!</li>
         </ul>
         <br />
-        <p><button> @Html.ActionLink("Learn more about this application", "About", "Home", null, new { @class = "btn btn-default" }) </button></p>
+        <p>@Html.ActionLink("Learn more about this application", "About", "Home", null, new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
         <img src="~/Content/images/CookingCuratorLogo.jpg" />
